# parse_avidemux_project

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  setup.cfg
src/parse_avidemux_project/: __init__.py  cli.py  csv_loader.py  models.py  parser.py
tests/: test_csv_loader.py  test_parser.py
tests/fixtures/: append_4_files.adm  append_4_files.csv  single_file_example1.adm  single_file_example2.adm
