[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "parse-avidemux-project"
version = "0.2.0"
description = "Parser for Avidemux TinyPY project scripts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/ferrous-lux/parse_avidemux_project"
Source = "https://github.com/ferrous-lux/parse_avidemux_project"
BugTracker = "https://github.com/ferrous-lux/parse_avidemux_project/issues"

[project.scripts]
parse-avidemux-project = "parse_avidemux_project.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
exclude = ["tests/fixtures"]

[tool.mypy]
exclude = ["tests/fixtures/"]

[tool.setuptools.packages.find]
where = ["src"]
